<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="16dp"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/name_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nick_name_items"
                android:textColor="@color/black"
                />
            <TextView
                android:id="@+id/nick_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:layout_toEndOf="@+id/name_title"
                android:layout_marginStart="8dp"
                />

            <TextView
                android:id="@+id/phone_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_items"
                android:textColor="@color/black"
                android:layout_below="@+id/name_title"
                />

            <TextView
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/name_title"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@+id/phone_title"
                android:text="@string/app_name" />

            <TextView
                android:id="@+id/note_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notes_items"
                android:textColor="@color/black"
                android:layout_below="@+id/phone_title"
                />

            <TextView
                android:id="@+id/note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/phone_title"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@+id/note_title"
                android:text="@string/app_name" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>